		 of Assembly instances and the Container.GetTypesToRegister method filter out Code Contract classes
		 (classes that are marked with a ContractClassForAttribute) (fixes #19).
		-[Core] DiagnosticResult.Severity property added to allow differentiating between warnings and
		 information messages (fixes #9).

	Breaking Changes:
		-[Core] IConstructorVerificationBehavior merged with IConstructorVerificationBehavior (fixes #2).
		-[Core] Constructor overload 'Container(ContainerOptions)' removed from Container (fixes #40).
		-[Core] Made ScopedLifestyle.WhenScopeEnds method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.RegisterForDisposal method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.CreateCurrentScopeProvider method abstract (fixes #11).
		-[Core] Removed ScopedLifestyle.DisposeInstances method (fixes #11).
		-[Core] Removed Container.InjectProperties method (fixes #12).
		-[Core] Removed the Container.RegisterSingle<TConcrete>() method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService, TImplementation>() method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService>(TService) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle<TService>(Func<TService>) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, Type) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, Func<object>) method (fixes #44).
		-[Core] Removed the Container.RegisterSingle(Type, object) method (fixes #44).
		-[Core] Container.RegisterAll methods renamed to Container.RegisterCollection (fixes #42).
		-[Core] Moved DecoratorPredicateContext class to the SimpleInjector root namespace (fixes #7).
		-[Core] Moved DecoratorContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Removed RegisterSingleDecorator extension methods (fixed #7).
		-[Core] Removed RegisterAllOpenGeneric extension methods (fixes #7).